# ice-age-agent

./: .env.local.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: requirements.md  session-state.md
prompts/: system_prompt.md
vault/: 2026-05-18-git-commit-skill-needed.md  2026-05-18-template-shouldnt-ship-process-doc-to-children.md  2026-05-20-claude-md-stays-lean-lazy-loading.md  2026-05-20-third-party-mcp-wireup-pattern.md  2026-05-22-gitignored-configs-need-tracked-samples.md  2026-05-23-handoff-pattern-structured-context-transfer.md  2026-05-24-agent-mediated-structured-writeup.md  2026-06-02-pocock-7-step-engineering-workflow.md  2026-06-09-on-demand-context-routing.md  2026-06-09-skills-extracted-not-anticipated.md  2026-06-10-claude-fable-5-capability-profile.md  2026-06-10-negative-space-documentation.md  2026-06-17-in-repo-coding-harness.md  INDEX.md
