[project]
name = "ice-age-agent"
version = "0.1.0"
description = "Sage — Vince's AI master across personal and work AI projects. Primarily prompt-driven; this Python package hosts the small helpers Claude Code's built-ins and MCPs can't cover (AgentMail polling, future YouTube transcripts, batch scans)."
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]
